# Lobster_L3_orderbook_reconstructor

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
examples/: example.py  test.py
src/lob_reconstructor/: __init__.py  lobster_sim.py
src/lob_reconstuctor/: lobster_sim.py  ofi.py  orderbook.py  orders.py  utils.py
src/lobster_reconstructor/: __init__.py  lobster_sim.py  orderbook.py
tests/: check_books_match_test.py  final_test.py  lob_file_test.py  manual_test.py  unit_tests.py
