[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lob-reconstructor"
version = "0.1.0"
authors = [
  { name="Luc-Alexandre Fiechter", email="lucfiechter@g.ucla.edu" },
]
description = "A LOBSTER data limit order book simulator and analysis toolkit."
readme = "README.md"
requires-python = ">=3.12"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Math/Applied Math/Financial Math Researchers",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "dash",
    "scipy",
    "sortedcontainers",
]


[project.urls]
"Homepage" = "https://github.com/Laffy03/Lobster_L3_orderbook_reconstructor"